--- a/front/site/quiz/css-quiz/animations-css/grecia.css
+++ b/front/site/quiz/css-quiz/animations-css/grecia.css
@@ -5,9 +5,17 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+header::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: #000;
+}
+
 .lista-nav {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     list-style: none;
     padding: 20px 0 20px 0;
 }
@@ -218,9 +226,13 @@ ul li:hover ul.dropdown {
     }
 }
 
-main {
-    margin-top: 50px;
-}   
+#introducao {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
 
 #introducao > h1 {
     font-size: 3em;
@@ -241,20 +253,39 @@ main {
     margin-left: 5px;
 }
 
-#facil {
-    margin-top: 50px;
+#secao-pergunta {
+    display: grid;
+    grid-template-areas:
+    "informacoes" "alternativas";
+    grid-template-columns: 1fr 1fr;
 }
 
-#facil > h3 {
-    font-size: 2em;
-    color: lightgreen;
+.informacoes-questao {
+    grid-area: informacoes;
+    background-color: #241bb9;
+    height: 92vh;
+    display: grid;
+    grid-template-areas:
+    "pergunta"
+    "texto"
+    "nivel";
 }
 
-label {
-    display: block;
+.alternativas {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-evenly;
+    gap: 220px;
+    margin-left: 100px;
 }
 
-input {
-    margin-top: 10px;
-    margin-left: 5px;
+#marginRadio {
+    display: flex;
+    margin-top: 30px;
+}
+
+input[type=radio] {
+    width: 50px;
+    height: 30px;
 }
