--- a/front/site/quiz/css-quiz/animations-css/grecia.css
+++ b/front/site/quiz/css-quiz/animations-css/grecia.css
@@ -315,9 +315,14 @@ ul li ul.dropdown a:hover {
     display: flex;
     flex-direction: column;
     align-items: start;
-    justify-content: space-evenly;
-    gap: 220px;
+    gap: 10px;
     margin-left: 100px;
+}
+
+.alternativas label {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Ajuste o espaçamento conforme necessário */
 }
 
 #marginRadio {
@@ -327,5 +332,5 @@ ul li ul.dropdown a:hover {
 
 input[type=radio] {
     width: 50px;
-    height: 30px;
+    height: 45px;
 }
