--- a/front/site/quiz/css-quiz/animations-css/grecia.css
+++ b/front/site/quiz/css-quiz/animations-css/grecia.css
@@ -249,7 +249,8 @@ ul li ul.dropdown a:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    display: none;
+    /* display: none; */
+    margin-top: 40px;
 }
 
 #introducao > h1 {
@@ -271,11 +272,26 @@ ul li ul.dropdown a:hover {
     margin-left: 5px;
 }
 
+#introducao > input[type=button] {
+    margin-top: 20px;
+    border: none;
+    font-size: 1.5em;
+    background-color: #170ceb;
+    color: #fff;
+    width: 250px;
+    padding: 12px;
+    border-radius: 8px;
+    box-shadow: 0 0 6px blue;
+    cursor: pointer;
+}
+
 #secao-pergunta-1 {
-    display: grid;
+    /* display: grid; */
+    display: none;
     grid-template-areas:
     "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
+    display: none;
 }
 
 .informacoes-questao {
@@ -314,6 +330,7 @@ ul li ul.dropdown a:hover {
 .alternativas {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: start;
     gap: 10px;
     margin-left: 100px;
@@ -322,15 +339,100 @@ ul li ul.dropdown a:hover {
 .alternativas label {
     display: flex;
     align-items: center;
-    gap: 10px; /* Ajuste o espaçamento conforme necessário */
+    gap: 10px;
 }
 
-#marginRadio {
+.marginRadio {
     display: flex;
     margin-top: 30px;
+    font-size: 2em;
+}
+
+.buttonResponder > input[type=button] {
+    border: none;
+    background-color: #241bb9;
+    color: #fff;
+    width: 150%;
+    padding: 20px;
+    font-size: 18px;
+    border-radius: 37px;
+    cursor: pointer;
+}
+
+label {
+    font-size: 2em;
 }
 
 input[type=radio] {
     width: 50px;
     height: 45px;
+}
+
+#res-certa {
+    /* display: grid; */
+    display: none;
+    grid-template-areas:
+    "frase" "proximo";
+    grid-template-columns: 1fr 1fr;
+}
+
+#fraseCerta {
+    grid-area: frase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1efa0b;
+    height: 91.9vh;
+    color: #fff;
+    font-size: 3em;
+}
+
+#fraseCerta > h1 {
+    font-weight: normal;
+}
+
+.proximo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #241bb9;
+    color: #fff;
+}
+
+.proximo > input[type=button] {
+    border: none;
+    background: none;
+    color: #fff;
+    font-size: 4em;
+    font-weight: normal;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+.proximo > span {
+    padding-left: 20px;
+    font-size: 4em;
+    font-weight: normal;
+}
+
+#res-errada {
+    display: none;
+    grid-template-areas:
+    "frase" "proximo";
+    grid-template-columns: 1fr 1fr;
+}
+
+#fraseErrada {
+    grid-area: frase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fa0b0b;
+    height: 91.9vh;
+    color: #fff;
+    font-size: 3em;
+}
+
+#fraseErrada > h1 {
+    font-weight: normal;
 }
