--- a/front/site/quiz/css-quiz/animations-css/grecia.css
+++ b/front/site/quiz/css-quiz/animations-css/grecia.css
@@ -459,7 +459,7 @@ input[type=radio] {
 }
 
 #secao-pergunta-4 {
-    display: grid;
+    display: gri;
     /* display: none; */
     grid-template-areas:
     "informacoes" "alternativas";
