--- a/front/site/quiz/css-quiz/animations-css/grecia.css
+++ b/front/site/quiz/css-quiz/animations-css/grecia.css
@@ -245,11 +245,11 @@ ul li ul.dropdown a:hover {
 }
 
 #introducao {
-    /* display: flex; */
+    display: flex;
+    /* display: none; */
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    display: none;
     margin-top: 40px;
     margin-left: 13%;
     margin-right: 14%;
@@ -291,14 +291,6 @@ ul li ul.dropdown a:hover {
     box-shadow: 0 0 6px blue;
 }
 
-#secao-pergunta-1 {
-    /* display: grid; */
-    display: none;
-    grid-template-areas:
-    "informacoes" "alternativas";
-    grid-template-columns: 1fr 1fr;
-    display: none;
-}
 
 .informacoes-questao {
     grid-area: informacoes;
@@ -365,13 +357,32 @@ ul li ul.dropdown a:hover {
     cursor: pointer;
 }
 
+.radio-container {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 1fr;
+    align-items: center;
+}
+
+.radio-container > input {
+    display: grid;
+}
+
+.radio-container > label {
+    display: grid;
+    margin-left: 20px;
+}
+
+
 label {
+    margin-left: 20px;
     font-size: 2em;
 }
 
-input[type=radio] {
+.tamanhoInputOriginal {
     width: 50px;
     height: 45px;
+    cursor: pointer;
 }
 
 #res-certa {
@@ -442,6 +453,14 @@ input[type=radio] {
     font-weight: normal;
 }
 
+#secao-pergunta-1 {
+    /* display: grid; */
+    display: none;
+    grid-template-areas:
+    "informacoes" "alternativas";
+    grid-template-columns: 1fr 1fr;
+}
+
 #secao-pergunta-2 {
     /* display: grid; */
     display: none;
@@ -459,18 +478,83 @@ input[type=radio] {
 }
 
 #secao-pergunta-4 {
-    display: grid;
-    /* display: none; */
+    /* display: grid; */
+    display: none;
     grid-template-areas:
     "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
 
-#correcaoTamanho {
+.correcaoTamanho {
     width: 110px;
 }
 
 #secao-pergunta-4 > .alternativas > .buttonResponder > input[type=button] {
     top: 50px;
     position: relative;
+}
+
+#secao-pergunta-5 {
+    /* display: grid; */
+    display: none;
+    grid-template-areas:
+    "informacoes" "alternativas";
+    grid-template-columns: 1fr 1fr;
+}
+
+#secao-pergunta-6 {
+    /* display: grid; */
+    display: none;
+    grid-template-areas:
+    "informacoes" "alternativas";
+    grid-template-columns: 1fr 1fr;
+}
+
+#secao-pergunta-7 {
+    /* display: grid; */
+    display: none;
+    grid-template-areas:
+    "informacoes" "alternativas";
+    grid-template-columns: 1fr 1fr;
+}
+
+#secao-pergunta-8 {
+    /* display: grid; */
+    display: none;
+    grid-template-areas:
+    "informacoes" "alternativas";
+    grid-template-columns: 1fr 1fr;
+}
+
+#secao-pergunta-9 {
+    /* display: grid; */
+    display: none;
+    grid-template-areas:
+    "informacoes" "alternativas";
+    grid-template-columns: 1fr 1fr;
+}
+
+#secao-pergunta-10 {
+    /* display: grid; */
+    display: none;
+    grid-template-areas:
+    "informacoes" "alternativas";
+    grid-template-columns: 1fr 1fr;
+}
+
+#fim {
+    display: none;
+}
+
+#fim > h1 {
+    margin-top: 50px;
+    text-transform: uppercase;
+    font-size: 2em;
+    text-align: center;
+}
+
+#fim > p {
+    margin-top: 30px;
+    font-size: 1.5em;
+    text-align: center;
 }
