A pergunta oito do quiz está estranha.

--- a/front/site/quiz/css-quiz/animations-css/nordica.css
+++ b/front/site/quiz/css-quiz/animations-css/nordica.css
@@ -513,7 +513,7 @@ input[type=radio] {
     grid-template-columns: 1fr 1fr;
 }
 #secao-pergunta-8 {
-    display: none;
+    display: grid;
     grid-template-areas: 
     "informacoe" "alternativas";
     grid-template-columns: 1fr 1fr;
