--- a/front/site/quiz/css-quiz/animations-css/nordica.css
+++ b/front/site/quiz/css-quiz/animations-css/nordica.css
@@ -258,7 +258,7 @@ ul li ul.dropdown a:hover {
 }
 
 #introducao {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -359,6 +359,7 @@ ul li ul.dropdown a:hover {
     color: white;
     align-items: center;
     text-align: center;
+    
 }
 #acertos {
     background-color: #1efa0b;
