--- a/front/site/paginas/css/egipcia.css
+++ b/front/site/paginas/css/egipcia.css
@@ -10,3 +10,11 @@ main {
 aside{
     background-color:#E6E6E6;
 }
+
+header{
+    background-color: #BF8C60;
+}
+
+.col{
+    background-color: #E5CEB2;
+}
