--- a/front/site/paginas/css/romana.css
+++ b/front/site/paginas/css/romana.css
@@ -1,1 +1,10 @@
 /* AQUI SOMENTE CORES DA PÁGINA */
+
+header{
+    background-color: #A61212;
+    color: white;
+}
+
+.col{
+    background-color: #FF685F;
+}
