--- a/front/site/quiz/css-quiz/animations-css/romana.css
+++ b/front/site/quiz/css-quiz/animations-css/romana.css
@@ -25,6 +25,11 @@ header::after {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+ul.dropdown {
+    background-color: rgba(255, 255, 255, 0.959);
+    padding: 8px;
+}
+
 ul {
     list-style: none;
 }
@@ -65,7 +70,7 @@ ul li ul.dropdown a {
 
 ul li ul.dropdown a:hover {
     opacity: 1;
-    color: #fff;
+    color: #000;
 }
 
 .dropdown > li > a {
@@ -90,7 +95,7 @@ ul li ul.dropdown a:hover {
 #link-home:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: #A61212;
     margin-left: 25px;
     display: block;
     width: 70%;
@@ -113,7 +118,7 @@ ul li ul.dropdown a:hover {
 
 .mouseSaiu::after {
     content: "";
-    background-color: pink;
+    background-color: #A61212;
     margin-left: 25px;
     display: block;
     animation-name: sair-animation;
@@ -137,7 +142,7 @@ ul li ul.dropdown a:hover {
 #link-mitologia:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: #A61212;
     margin-left: 25px;
     display: block;
     width: 80%;
@@ -150,7 +155,7 @@ ul li ul.dropdown a:hover {
 
 .mouseSaiuMitologia::after {
     content: "";
-    background-color: pink;
+    background-color: #A61212;
     margin-left: 25px;
     display: block;
     animation-name: sair-animation-grecia;
@@ -175,15 +180,14 @@ ul li ul.dropdown a:hover {
     padding: 8px 8px;
 }
 
-#margin-top-dropdown:hover::after, #linkFenicia:hover::after, #linkGrecoRomana:hover::after, #linkHindu:hover::after, #linkNordica:hover::after, #linkRomana:hover::after, #linkGeral:hover::after {
+#margin-top-dropdown:hover::after, #linkFenicia:hover::after, #linkGrecia:hover::after, #linkGrecoRomana:hover::after, #linkHindu:hover::after, #linkNordica:hover::after, #linkGeral:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
-    margin-left: 10px;
+    background-color: #A61212;
     display: block;
-    width: 55%;
+    width: 100%;
     animation-name: dropdown-animations;
-    animation-duration: .2s;
+    animation-duration: .3s;
     animation-iteration-count: 1;
     animation-timing-function: linear;
 }
@@ -194,14 +198,14 @@ ul li ul.dropdown a:hover {
     }
 
     100% {
-        width: 55%;
+        width: 100%;
     }
 }
 
 #link-dropdown-excessao:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: #A61212;
     margin-left: 10px;
     display: block;
     width: 95%;
@@ -221,9 +225,9 @@ ul li ul.dropdown a:hover {
     }
 }
 
-.saiuEgipcia::after, .saiuFenicia::after, .saiuGeral::after, .saiuGr::after, .saiuHindu::after, .saiuNordica::after, .saiuRomana::after {
+.saiuEgipcia::after, .saiuFenicia::after, .saiuGrecia::after .saiuGeral::after, .saiuGr::after, .saiuHindu::after, .saiuNordica::after {
     content: "";
-    background-color: pink;
+    background-color: #A61212;
     margin-left: 10px;
     display: block;
     animation-name: sair-dropdown-animations;
@@ -234,7 +238,7 @@ ul li ul.dropdown a:hover {
 
 @keyframes sair-dropdown-animations {
     0% {
-        width: 55%;
+        width: 100%;
         height: 2px;
     }
 
@@ -279,7 +283,7 @@ ul li ul.dropdown a:hover {
     margin-top: 20px;
     border: none;
     font-size: 1.5em;
-    background-color: #170ceb;
+    background-color: #FF685F;
     color: #fff;
     width: 250px;
     padding: 12px;
@@ -288,13 +292,13 @@ ul li ul.dropdown a:hover {
 }
 
 #introducao > input[type=button]:hover {
-    box-shadow: 0 0 6px blue;
+    box-shadow: 0 0 4px #A61212;
 }
 
 
 .informacoes-questao {
     grid-area: informacoes;
-    background-color: #241bb9;
+    background-color: #800080;
     color: #fff;
     height: 91.9vh;
     display: grid;
@@ -348,7 +352,7 @@ ul li ul.dropdown a:hover {
 
 .buttonResponder > input[type=button] {
     border: none;
-    background-color: #241bb9;
+    background-color: #A61212;
     color: #fff;
     width: 150%;
     padding: 20px;
@@ -371,6 +375,7 @@ ul li ul.dropdown a:hover {
 .radio-container > label {
     display: grid;
     margin-left: 20px;
+    margin-right: 20px;
 }
 
 
@@ -412,7 +417,7 @@ label {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #241bb9;
+    background-color: #800080;
     color: #fff;
 }
 
@@ -487,11 +492,6 @@ label {
 
 .correcaoTamanho {
     width: 110px;
-}
-
-#secao-pergunta-4 > .alternativas > .buttonResponder > input[type=button] {
-    top: 50px;
-    position: relative;
 }
 
 #secao-pergunta-5 {
