--- a/front/site/quiz/css-quiz/animations-css/romana.css
+++ b/front/site/quiz/css-quiz/animations-css/romana.css
@@ -180,7 +180,7 @@ ul li ul.dropdown a:hover {
     padding: 8px 8px;
 }
 
-#margin-top-dropdown:hover::after, #linkFenicia:hover::after, #linkGrecia:hover::after, #linkGrecoRomana:hover::after, #linkHindu:hover::after, #linkNordica:hover::after, #linkGeral:hover::after {
+#margin-top-dropdown:hover::after,  #linkGrecia:hover::after, #linkGrecoRomana:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after, #linkNordica:hover::after, #linkGeral:hover::after {
     content: "";
     height: 2px;
     background-color: #A61212;
@@ -206,9 +206,8 @@ ul li ul.dropdown a:hover {
     content: "";
     height: 2px;
     background-color: #A61212;
-    margin-left: 10px;
     display: block;
-    width: 95%;
+    width: 100%;
     animation-name: dropdown-excessao-animation;
     animation-duration: .2s;
     animation-iteration-count: 1;
@@ -221,14 +220,14 @@ ul li ul.dropdown a:hover {
     }
 
     100% {
-        width: 95%;
+        width: 100%;
     }
 }
 
-.saiuEgipcia::after, .saiuFenicia::after, .saiuGrecia::after .saiuGeral::after, .saiuGr::after, .saiuHindu::after, .saiuNordica::after {
+.saiuEgipcia::after, .saiuGrecia::after, .saiuGeral::after, .saiuGr::after, .saiuHindu::after, .saiuIrlandesa::after, .saiuNordica::after {
     content: "";
     background-color: #A61212;
-    margin-left: 10px;
+    width: 100%;
     display: block;
     animation-name: sair-dropdown-animations;
     animation-duration: .2s;
@@ -242,6 +241,28 @@ ul li ul.dropdown a:hover {
         height: 2px;
     }
 
+    100% {
+        width: 0%;
+        height: 2px;
+    }
+}
+
+.saiuMesopotamia::after {
+    content: "";
+    background-color: #A61212;
+    display: block;
+    width: 100%;
+    animation-name: sair-dropdown-excessao;
+    animation-duration: .2s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+}
+
+@keyframes sair-dropdown-excessao {
+    0% {
+        width: 100%;
+        height: 2px;
+    }
     100% {
         width: 0%;
         height: 2px;
@@ -319,7 +340,7 @@ ul li ul.dropdown a:hover {
     display: grid;
     justify-items: center;
     margin: 0 50px;
-    font-size: 4em;
+    font-size: 3em;
     text-align: left;
 }
 
