--- a/front/site/quiz/css-quiz/animations-css/grecia.css
+++ b/front/site/quiz/css-quiz/animations-css/grecia.css
@@ -25,6 +25,11 @@ header::after {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+ul.dropdown {
+    background-color: rgba(255, 255, 255, 0.959);
+    padding: 8px;
+}
+
 ul {
     list-style: none;
 }
@@ -65,7 +70,7 @@ ul li ul.dropdown a {
 
 ul li ul.dropdown a:hover {
     opacity: 1;
-    color: #fff;
+    color: #000;
 }
 
 .dropdown > li > a {
@@ -175,15 +180,14 @@ ul li ul.dropdown a:hover {
     padding: 8px 8px;
 }
 
-#margin-top-dropdown:hover::after,  #linkGrecoRomana:hover::after, #linkHindu:hover::after,#linkIrlandesa:hover::after, #linkNordica:hover::after, #linkRomana:hover::after, #linkGeral:hover::after {
+#margin-top-dropdown:hover::after,  #linkGrecia:hover::after, #linkGrecoRomana:hover::after, #linkHindu:hover::after,  #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after {
     content: "";
     height: 2px;
     background-color: pink;
-    margin-left: 10px;
     display: block;
-    width: 55%;
+    width: 100%;
     animation-name: dropdown-animations;
-    animation-duration: .2s;
+    animation-duration: .3s;
     animation-iteration-count: 1;
     animation-timing-function: linear;
 }
@@ -194,7 +198,7 @@ ul li ul.dropdown a:hover {
     }
 
     100% {
-        width: 55%;
+        width: 100%;
     }
 }
 
@@ -202,9 +206,8 @@ ul li ul.dropdown a:hover {
     content: "";
     height: 2px;
     background-color: pink;
-    margin-left: 10px;
     display: block;
-    width: 95%;
+    width: 100%;
     animation-name: dropdown-excessao-animation;
     animation-duration: .2s;
     animation-iteration-count: 1;
@@ -217,14 +220,14 @@ ul li ul.dropdown a:hover {
     }
 
     100% {
-        width: 95%;
+        width: 100%;
     }
 }
 
-.saiuEgipcia::after,  .saiuGeral::after, .saiuGr::after, .saiuHindu::after, .saiuIrlandesa, .saiuNordica::after, .saiuRomana::after {
+.saiuEgipcia::after, .saiuGrecia::after, .saiuGeral::after, .saiuGr::after, .saiuHindu::after, .saiuNordica::after, .saiuRomana::after {
     content: "";
     background-color: pink;
-    margin-left: 10px;
+    width: 100%;
     display: block;
     animation-name: sair-dropdown-animations;
     animation-duration: .2s;
@@ -234,10 +237,32 @@ ul li ul.dropdown a:hover {
 
 @keyframes sair-dropdown-animations {
     0% {
-        width: 55%;
+        width: 100%;
         height: 2px;
     }
 
+    100% {
+        width: 0%;
+        height: 2px;
+    }
+}
+
+.saiuMesopotamia::after {
+    content: "";
+    background-color: pink;
+    display: block;
+    width: 100%;
+    animation-name: sair-dropdown-excessao;
+    animation-duration: .2s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+}
+
+@keyframes sair-dropdown-excessao {
+    0% {
+        width: 100%;
+        height: 2px;
+    }
     100% {
         width: 0%;
         height: 2px;
@@ -268,6 +293,20 @@ ul li ul.dropdown a:hover {
     font-size: 1.25em;
     margin-left: 25px;
     margin-top: 8px;
+}
+
+#introducao > label {
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+#introducao > input {
+    margin-bottom: 20px;
+    letter-spacing: .2px;
+    font-size: 1.2em;
+    padding: 3px;
+    width: 15%;
+    text-align: center;
 }
 
 #introducao > h2 {
@@ -315,7 +354,7 @@ ul li ul.dropdown a:hover {
     display: grid;
     justify-items: center;
     margin: 0 50px;
-    font-size: 4em;
+    font-size: 3em;
     text-align: left;
 }
 
@@ -346,7 +385,7 @@ ul li ul.dropdown a:hover {
     font-size: 2em;
 }
 
-.buttonResponder > input[type=button] {
+.buttonResponder > input[type=button], .buttonResponder > input[type=submit] {
     border: none;
     background-color: #241bb9;
     color: #fff;
@@ -371,6 +410,7 @@ ul li ul.dropdown a:hover {
 .radio-container > label {
     display: grid;
     margin-left: 20px;
+    margin-right: 20px;
 }
 
 
@@ -489,11 +529,6 @@ label {
     width: 110px;
 }
 
-#secao-pergunta-4 > .alternativas > .buttonResponder > input[type=button] {
-    top: 50px;
-    position: relative;
-}
-
 #secao-pergunta-5 {
     /* display: grid; */
     display: none;
@@ -542,6 +577,10 @@ label {
     grid-template-columns: 1fr 1fr;
 }
 
+#contador-acertos {
+    display: none;
+}
+
 #fim {
     display: none;
 }
@@ -558,3 +597,14 @@ label {
     font-size: 1.5em;
     text-align: center;
 }
+
+@media (max-width: 1400px) {
+    #ajustePergunta6, #ajustePergunta7, #ajustePergunta8 ,#ajustePergunta10 {
+        font-size: 2.5em;
+    }
+
+    .informacoes-questao {
+        height: 87.1vh;
+    }
+}
+
