--- a/front/site/quiz/css-quiz/animations-css/romana.css
+++ b/front/site/quiz/css-quiz/animations-css/romana.css
@@ -20,9 +20,14 @@ header::after {
     padding: 20px 0 20px 0;
 }
 
-.lista-nav>li>a {
+.lista-nav > li > a {
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+ul.dropdown {
+    background-color: rgba(255, 255, 255, 0.959);
+    padding: 8px;
 }
 
 ul {
@@ -61,19 +66,19 @@ ul li:hover ul.dropdown {
 ul li ul.dropdown a {
     opacity: 0.5;
 }
-
+  
 
 ul li ul.dropdown a:hover {
     opacity: 1;
-    color: #fff;
+    color: #000;
 }
 
-.dropdown>li>a {
+.dropdown > li > a {
     padding: 10px 50px 10px 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.dropdown>#margin-top-dropdown>a {
+.dropdown > #margin-top-dropdown > a {
     margin-top: 20px;
 }
 
@@ -83,15 +88,14 @@ ul li ul.dropdown a:hover {
     bottom: 2px;
 }
 
-#link-home>a,
-#link-grecia>a {
+#link-home > a, #link-mitologia > a {
     padding-bottom: 8px;
 }
 
 #link-home:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: #A61212;
     margin-left: 25px;
     display: block;
     width: 70%;
@@ -114,7 +118,7 @@ ul li ul.dropdown a:hover {
 
 .mouseSaiu::after {
     content: "";
-    background-color: pink;
+    background-color: #A61212;
     margin-left: 25px;
     display: block;
     animation-name: sair-animation;
@@ -135,10 +139,10 @@ ul li ul.dropdown a:hover {
     }
 }
 
-#link-grecia:hover::after {
+#link-mitologia:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: #A61212;
     margin-left: 25px;
     display: block;
     width: 80%;
@@ -149,9 +153,9 @@ ul li ul.dropdown a:hover {
     animation-timing-function: linear;
 }
 
-.mouseSaiuGrecia::after {
+.mouseSaiuMitologia::after {
     content: "";
-    background-color: pink;
+    background-color: #A61212;
     margin-left: 25px;
     display: block;
     animation-name: sair-animation-grecia;
@@ -172,25 +176,18 @@ ul li ul.dropdown a:hover {
     }
 }
 
-.dropdown>li>a {
+.dropdown > li > a {
     padding: 8px 8px;
 }
 
-#margin-top-dropdown:hover::after,
-#linkFenicia:hover::after,
-#linkGrecoRomana:hover::after,
-#linkHindu:hover::after,
-#linkNordica:hover::after,
-#linkRomana:hover::after,
-#linkGeral:hover::after {
+#margin-top-dropdown:hover::after,  #linkGrecia:hover::after, #linkGrecoRomana:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after, #linkNordica:hover::after, #linkGeral:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
-    margin-left: 10px;
+    background-color: #A61212;
     display: block;
-    width: 55%;
+    width: 100%;
     animation-name: dropdown-animations;
-    animation-duration: .2s;
+    animation-duration: .3s;
     animation-iteration-count: 1;
     animation-timing-function: linear;
 }
@@ -201,17 +198,16 @@ ul li ul.dropdown a:hover {
     }
 
     100% {
-        width: 55%;
+        width: 100%;
     }
 }
 
 #link-dropdown-excessao:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
-    margin-left: 10px;
+    background-color: #A61212;
     display: block;
-    width: 95%;
+    width: 100%;
     animation-name: dropdown-excessao-animation;
     animation-duration: .2s;
     animation-iteration-count: 1;
@@ -224,20 +220,14 @@ ul li ul.dropdown a:hover {
     }
 
     100% {
-        width: 95%;
+        width: 100%;
     }
 }
 
-.saiuEgipcia::after,
-.saiuFenicia::after,
-.saiuGeral::after,
-.saiuGr::after,
-.saiuHindu::after,
-.saiuNordica::after,
-.saiuRomana::after {
+.saiuEgipcia::after, .saiuGrecia::after, .saiuGeral::after, .saiuGr::after, .saiuHindu::after, .saiuIrlandesa::after, .saiuNordica::after {
     content: "";
-    background-color: pink;
-    margin-left: 10px;
+    background-color: #A61212;
+    width: 100%;
     display: block;
     animation-name: sair-dropdown-animations;
     animation-duration: .2s;
@@ -247,7 +237,7 @@ ul li ul.dropdown a:hover {
 
 @keyframes sair-dropdown-animations {
     0% {
-        width: 55%;
+        width: 100%;
         height: 2px;
     }
 
@@ -257,8 +247,31 @@ ul li ul.dropdown a:hover {
     }
 }
 
+.saiuMesopotamia::after {
+    content: "";
+    background-color: #A61212;
+    display: block;
+    width: 100%;
+    animation-name: sair-dropdown-excessao;
+    animation-duration: .2s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+}
+
+@keyframes sair-dropdown-excessao {
+    0% {
+        width: 100%;
+        height: 2px;
+    }
+    100% {
+        width: 0%;
+        height: 2px;
+    }
+}
+
 #introducao {
     display: flex;
+    /* display: none; */
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -267,31 +280,31 @@ ul li ul.dropdown a:hover {
     margin-right: 14%;
 }
 
-#introducao>h1 {
+#introducao > h1 {
     font-size: 3em;
     margin-left: 5px;
 }
 
-#introducao>ol {
+#introducao > ol {
     margin-top: 20px;
 }
 
-#introducao>ol>li {
+#introducao > ol > li {
     font-size: 1.25em;
     margin-left: 25px;
     margin-top: 8px;
 }
 
-#introducao>h2 {
+#introducao > h2 {
     margin-top: 20px;
     margin-left: 5px;
 }
 
-#introducao>input[type=button] {
+#introducao > input[type=button] {
     margin-top: 20px;
     border: none;
     font-size: 1.5em;
-    background-color: red;
+    background-color: #FF685F;
     color: #fff;
     width: 250px;
     padding: 12px;
@@ -299,28 +312,21 @@ ul li ul.dropdown a:hover {
     cursor: pointer;
 }
 
-#introducao>input[type=button]:hover {
-    box-shadow: 2px 0px 10px cadetblue;
+#introducao > input[type=button]:hover {
+    box-shadow: 0 0 4px #A61212;
 }
 
-#secao-pergunta-1 {
-    display: none;
-    grid-template-areas:
-        "informacoes" "alternativas";
-    grid-template-columns: 1fr 1fr;
-}
 
 .informacoes-questao {
     grid-area: informacoes;
-    background-color: red;
-
+    background-color: #800080;
     color: #fff;
-    height: 92vh;
+    height: 91.9vh;
     display: grid;
     grid-template-areas:
-        "pergunta"
-        "texto"
-        "nivel";
+    "pergunta"
+    "texto"
+    "nivel";
     grid-template-rows: 30% 60% 10%;
 }
 
@@ -334,7 +340,7 @@ ul li ul.dropdown a:hover {
     display: grid;
     justify-items: center;
     margin: 0 50px;
-    font-size: 4em;
+    font-size: 3em;
     text-align: left;
 }
 
@@ -353,23 +359,6 @@ ul li ul.dropdown a:hover {
     margin-left: 100px;
 }
 
-#quantidadeAcertos {
-    display: grid;
-    grid-template-columns: "acertos" "classificacao";
-    color: white;
-    align-items: center;
-    text-align: center;
-
-}
-#acertos {
-    background-color: #1efa0b;
-    display: inline;
-}
-#classificacao {
-    display: grid;
-    display: inline;
-}
-
 .alternativas label {
     display: flex;
     align-items: center;
@@ -382,9 +371,9 @@ ul li ul.dropdown a:hover {
     font-size: 2em;
 }
 
-.buttonResponder>input[type=button] {
+.buttonResponder > input[type=button] {
     border: none;
-    background-color: red;
+    background-color: #A61212;
     color: #fff;
     width: 150%;
     padding: 20px;
@@ -393,20 +382,40 @@ ul li ul.dropdown a:hover {
     cursor: pointer;
 }
 
+.radio-container {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: 1fr;
+    align-items: center;
+}
+
+.radio-container > input {
+    display: grid;
+}
+
+.radio-container > label {
+    display: grid;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+
 label {
+    margin-left: 20px;
     font-size: 2em;
 }
 
-input[type=radio] {
+.tamanhoInputOriginal {
     width: 50px;
     height: 45px;
+    cursor: pointer;
 }
 
 #res-certa {
     /* display: grid; */
     display: none;
     grid-template-areas:
-        "frase" "proximo";
+    "frase" "proximo";
     grid-template-columns: 1fr 1fr;
 }
 
@@ -421,7 +430,7 @@ input[type=radio] {
     font-size: 3em;
 }
 
-#fraseCerta>h1 {
+#fraseCerta > h1 {
     font-weight: normal;
 }
 
@@ -429,11 +438,11 @@ input[type=radio] {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: red;
+    background-color: #800080;
     color: #fff;
 }
 
-.proximo>input[type=button] {
+.proximo > input[type=button] {
     border: none;
     background: none;
     color: #fff;
@@ -443,7 +452,7 @@ input[type=radio] {
     cursor: pointer;
 }
 
-.proximo>span {
+.proximo > span {
     padding-left: 20px;
     font-size: 4em;
     font-weight: normal;
@@ -452,10 +461,9 @@ input[type=radio] {
 #res-errada {
     display: none;
     grid-template-areas:
-        "frase" "proximo";
+    "frase" "proximo";
     grid-template-columns: 1fr 1fr;
 }
-
 #fraseErrada {
     grid-area: frase;
     display: flex;
@@ -467,82 +475,107 @@ input[type=radio] {
     font-size: 3em;
 }
 
-#finalCerto {
-    display: none;
-    grid-template-areas: "frase";
-    grid-template-columns: 1fr;
+#fraseErrada > h1 {
+    font-weight: normal;
 }
 
-#fraseErrada>h1 {
-    font-weight: normal;
+#secao-pergunta-1 {
+    /* display: grid; */
+    display: none;
+    grid-template-areas:
+    "informacoes" "alternativas";
+    grid-template-columns: 1fr 1fr;
 }
 
 #secao-pergunta-2 {
     /* display: grid; */
     display: none;
     grid-template-areas:
-        "informacoes" "alternativas";
+    "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
 
 #secao-pergunta-3 {
+    /* display: grid; */
     display: none;
     grid-template-areas:
-        "informacoes" "alternativas";
+    "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
 
-/*Pergunta 4*/
 #secao-pergunta-4 {
+    /* display: grid; */
     display: none;
     grid-template-areas:
     "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
 
-#secao-pergunta-4>.alternativas>.buttonResponder>input[type=button] {
-    top: 50px;
-    position: relative;
+.correcaoTamanho {
+    width: 110px;
 }
-/*Pergunta 5*/
+
 #secao-pergunta-5 {
+    /* display: grid; */
     display: none;
     grid-template-areas:
     "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
-/*Pergunta 6*/
+
 #secao-pergunta-6 {
+    /* display: grid; */
     display: none;
     grid-template-areas:
     "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
-/*Pergunta 7*/
+
 #secao-pergunta-7 {
+    /* display: grid; */
     display: none;
-    grid-template-areas: 
+    grid-template-areas:
     "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
-/*Pergunta 8*/
+
 #secao-pergunta-8 {
+    /* display: grid; */
     display: none;
-    grid-template-areas: 
+    grid-template-areas:
     "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
-/*Pergunta 9*/
+
 #secao-pergunta-9 {
+    /* display: grid; */
     display: none;
-    grid-template-areas: 
+    grid-template-areas:
     "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
 }
-/*Pergunta 10*/
+
 #secao-pergunta-10 {
+    /* display: grid; */
     display: none;
-    grid-template-areas: 
+    grid-template-areas:
     "informacoes" "alternativas";
     grid-template-columns: 1fr 1fr;
+}
+
+#fim {
+    display: none;
+}
+
+#fim > h1 {
+    margin-top: 50px;
+    text-transform: uppercase;
+    font-size: 2em;
+    text-align: center;
+}
+
+#fim > p {
+    margin-top: 30px;
+    font-size: 1.5em;
+    text-align: center;
 }
