--- a/front/site/paginas/css/grega.css
+++ b/front/site/paginas/css/grega.css
@@ -7,3 +7,11 @@ header{
 .col{
     background-color: #6C9BD9;
 }
+
+input[type=button] {
+    background-color: #6C9BD9;
+}
+
+input[type=button]:hover {
+    box-shadow: 2px 0px 10px rgb(95, 123, 160);
+}
