--- a/front/site/paginas/css/hindu.css
+++ b/front/site/paginas/css/hindu.css
@@ -7,3 +7,11 @@ header{
 .col{
     background-color: #F5BFCD;
 }
+
+input[type=button] {
+    background-color: #BF4E4E;
+}
+
+input[type=button]:hover {
+    box-shadow: 2px 0px 10px #a12b2b;
+}
