--- a/front/site/paginas/css/romana.css
+++ b/front/site/paginas/css/romana.css
@@ -8,3 +8,10 @@ header{
 .col{
     background-color: #FF685F;
 }
+input[type=button] {
+    background-color: #A61212;
+}
+
+input[type=button]:hover {
+    box-shadow: 2px 0px 10px #FF685F;
+}
