--- a/front/site/paginas/css/egipcia.css
+++ b/front/site/paginas/css/egipcia.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
 }
+
 main {
     background-color: #DBE4ED;
 }
@@ -17,4 +18,12 @@ header{
 
 .col{
     background-color: #E5CEB2;
+}
+
+input[type=button] {
+    background-color: #BF8C60;
+}
+
+input[type=button]:hover {
+    box-shadow: 2px 0px 10px #BF8C60;
 }
