--- a/front/site/paginas/css/index.css
+++ b/front/site/paginas/css/index.css
@@ -170,3 +170,100 @@
     letter-spacing: .2em;
     
 }
+
+header::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background-color: #000;
+}
+
+.lista-nav {
+    display: flex;
+    justify-content: flex-start;
+    list-style: none;
+    padding: 20px 0 20px 0;
+}
+
+.lista-nav>li>a {
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ul {
+    list-style: none;
+}
+
+ul li {
+    display: inline-block;
+    position: relative;
+}
+
+ul li a {
+    display: block;
+    padding: 10px 40px;
+    color: #000;
+    text-decoration: none;
+    text-align: left;
+    font-size: 16px;
+}
+
+ul li ul.dropdown li {
+    display: block;
+}
+
+ul li ul.dropdown {
+    width: 100%;
+    position: absolute;
+    z-index: 999;
+    display: none;
+}
+
+ul li:hover ul.dropdown {
+    display: block;
+}
+
+ul li ul.dropdown a {
+    opacity: 0.5;
+}
+
+
+ul li ul.dropdown a:hover {
+    opacity: 1;
+    color: #fff;
+}
+
+.dropdown>li>a {
+    padding: 10px 50px 10px 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.dropdown>#margin-top-dropdown>a {
+    margin-top: 20px;
+}
+
+#seta-baixo {
+    display: inline-block;
+    position: relative;
+    bottom: 2px;
+}
+
+#link-home>a,
+#link-grecia>a {
+    padding-bottom: 8px;
+}
+
+#link-home:hover::after {
+    content: "";
+    height: 2px;
+    background-color: pink;
+    margin-left: 25px;
+    display: block;
+    width: 70%;
+    transition: .5s;
+    animation-name: hover-animation;
+    animation-duration: .2s;
+    animation-iteration-count: 1;
+    animation-timing-function: linear;
+}
