--- a/front/site/paginas/css/style.css
+++ b/front/site/paginas/css/style.css
@@ -10,13 +10,6 @@
     max-width: 100%;
 }
 
-main {
-    display: flex;
-    text-align: justify;
-    grid-area: m;
-    height: auto;
-}
-
 .img-aside {
     width: 100%;
     height: auto;
@@ -77,17 +70,13 @@ figure {
 header {
     display: flex;
     align-items: center;
+    text-align: center;
     height: 170px;
 }
 
 header > h1{
     font-family: 'Bebas Neue', sans-serif;
     letter-spacing: 10px;
-}
-
-header > h1 {
-  margin-left: 35%;
-  margin-right: 35%;
 }
 
 .h1-texto {
@@ -203,3 +192,5 @@ input[type=button] {
     border-radius: 8px;
     cursor: pointer;
 }
+
+
