--- a/front/site/quiz/css-quiz/animations-css/nordica.css
+++ b/front/site/quiz/css-quiz/animations-css/nordica.css
@@ -491,6 +491,11 @@ input[type=radio] {
     color: #fff;
     font-size: 3em;
 }
+.marginRadio {
+    display: flex;
+    margin-top: 30px;
+    font-size: 2em;
+}
 
 #finalCerto {
     display: none;
