arrumando umas coisas

--- a/front/site/paginas/css/egipcia.css
+++ b/front/site/paginas/css/egipcia.css
@@ -12,8 +12,9 @@ aside{
     background-color:#E6E6E6;
 }
 
-header{
-    background-color: #BF8C60;
+header  {
+    background-color: #01173b;
+    color: #FDFDFD;
 }
 
 .col{
