--- a/front/site/paginas/css/style.css
+++ b/front/site/paginas/css/style.css
@@ -208,6 +208,7 @@ input[type=button] {
 .lista-nav > li > a {
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+    color: #FDFDFD;
 }
 
 ul.dropdown {
