--- a/front/site/paginas/css/style.css
+++ b/front/site/paginas/css/style.css
@@ -73,6 +73,8 @@ header {
     align-items: center;
     text-align: center;
     height: 170px;
+    background-color: #01173b;
+    color: #FDFDFD;
 }
 
 header > h1{
@@ -95,7 +97,7 @@ header > h1{
 }
 
 footer {
-    background-color: #333;
+    background-color: #0f0f0f;
     color: #fff;
     padding: 2px 0;
     font-size: 16px;
@@ -114,7 +116,7 @@ footer {
     margin: auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+
 }
 
 .footer-logo {
@@ -140,12 +142,13 @@ footer {
 .footer-links a {
     text-decoration: none;
     color: #fff;
-    transition: color 0.3s;
+    transition: color 0.2s;
     font-size: 16px;
 }
 
 .footer-links a:hover {
-    color: #ff6600;
+    color: #3479d4;
+    scale: 1.04;
 }
 
 .footer-social > ul > li {
@@ -154,16 +157,16 @@ footer {
     margin: 0;
 }
 
-
 .footer-social a {
     text-decoration: none;
     color: #fff;
     font-size: 20px;
-    transition: color 0.3s;
+    transition: color 0.2s;
 }
 
 .footer-social a:hover {
-    color: #ff6600;
+    color: #3479d4;
+    scale: 1.04;
 }
 
 .footer-bottom {
@@ -196,6 +199,11 @@ input[type=button] {
     padding: 12px;
     border-radius: 8px;
     cursor: pointer;
+    background-color: #3479d4;
+}
+
+input[type=button]:hover {
+    box-shadow: 2px 0px 10px #073c81;
 }
 
 .lista-nav {
@@ -208,26 +216,31 @@ input[type=button] {
 .lista-nav > li > a {
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+    color: #FDFDFD;
 }
 
 ul.dropdown {
-    background-color: rgba(255, 255, 255, 0.959);
+    background-color: rgba(1, 23, 59, 0.959);
     padding: 8px;
 }
 
 ul {
     list-style: none;
 }
-
-ul li {
-    display: inline-block;
+ul li{
+    display: block;
     position: relative;
+}
+
+.footer-container ul{
+display: grid;
+grid-template-columns: 1fr 1fr;
 }
 
 ul li a {
     display: block;
     padding: 10px 40px;
-    color: #000;
+    color: #fdfdfd;
     text-decoration: none;
     text-align: left;
     font-size: 16px;
@@ -243,6 +256,7 @@ ul li ul.dropdown {
     z-index: 999;
     display: none;
     margin-left: 30px;
+    background-color: #01173b;
 }
 
 ul li:hover ul.dropdown {
@@ -256,7 +270,7 @@ ul li ul.dropdown a {
 
 ul li ul.dropdown a:hover {
     opacity: 1;
-    color: #000;
+    color: #fdfdfd;
 }
 
 .dropdown > li > a {
@@ -281,7 +295,7 @@ ul li ul.dropdown a:hover {
 #link-home:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: rgb(20, 18, 126);
     margin-left: 25px;
     display: block;
     width: 70%;
@@ -328,7 +342,7 @@ ul li ul.dropdown a:hover {
 #link-quiz:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: rgb(20, 18, 126);
     margin-left: 25px;
     display: block;
     width: 80%;
@@ -369,7 +383,7 @@ ul li ul.dropdown a:hover {
 #margin-top-dropdown:hover::after, #linkJaponesa:hover::after, #linkHindu:hover::after, #linkIrlandesa:hover::after, #linkNordica:hover::after, #linkGeral:hover::after, #linkRomana:hover::after, #linkGrecia:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: rgb(20, 18, 126);
     display: block;
     width: 100%;
     animation-name: dropdown-animations;
@@ -391,7 +405,7 @@ ul li ul.dropdown a:hover {
 #link-dropdown-excessao:hover::after {
     content: "";
     height: 2px;
-    background-color: pink;
+    background-color: rgb(20, 18, 126);
     display: block;
     width: 100%;
     animation-name: dropdown-excessao-animation;
@@ -412,7 +426,7 @@ ul li ul.dropdown a:hover {
 
 .saiuEgipcia::after, .saiuGeral::after, .saiuJaponesa::after, .saiuHindu::after,.saiuIrlandesa::after, .saiuNordica::after, .saiuRomana::after {
     content: "";
-    background-color: pink;
+    background-color: rgb(20, 18, 126);
     width: 100%;
     display: block;
     animation-name: sair-dropdown-animations;
@@ -453,4 +467,9 @@ ul li ul.dropdown a:hover {
         width: 0%;
         height: 2px;
     }
+}
+
+header  {
+    background-color: #01173b;
+    color: #FDFDFD;
 }
